--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8" />
       <link rel="icon" type="image/svg+xml" href="https://yt3.googleusercontent.com/ytc/AOPolaRXKUnnsqQflxQj4WdIn4toZCSvgf83e8htqe-r=s176-c-k-c0x00ffffff-no-rj-mo" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="/dist/output.css" rel="stylesheet">
       <title>Băng Đĩa Lậu</title>
     </head>
     <body >
